--- a/manuscript/manuscript-one.tex
+++ b/manuscript/manuscript-one.tex
@@ -120,7 +120,7 @@
 \section{Introduction}
 \label{sec:introduction}
 
-Accurate risk prediction from time-to-event data is a
+Accurate risk prediction from time-to-event data is an
 important problem in many areas of medical research and public
 health. Super learning \citep{van2007super}, also known as
 ensemble learning or stacked regression
@@ -139,7 +139,7 @@ event-time and censoring distributions simultaneously. This
 joint estimation framework avoids the need for pre-specifying
 a censoring model, which is a limitation of many existing
 methods. Our approach also allows for full flexibility in the
-choice of models in the library, contrasting with earlier
+choice of models in the library, contrasting with other
 proposals that restrict the library to specific model classes
 \citep{polley2011-sl-cens,golmakani2020super}. Furthermore,
 unlike iterative approaches such as those in
@@ -182,7 +182,7 @@ constant cumulative hazard functions when there are event
 times in the test set which do not occur in the learning set.
 This problem occurs with prominent survival learners including
 the Kaplan-Meier estimator, random survival forests, and
-semi-parametric Cox regression models and these learners
+semi-parametric Cox regression models, and these learners
 cannot be included in the library of the super learner
 proposed by \cite{polley2011-sl-cens}. When a proportional
 hazards model is assumed, the baseline hazard function can be
@@ -209,9 +209,10 @@ be pre-specified.
 
 More recent work by \cite{han2021inverse} and
 \cite{westling2021inference} circumvents the need to
-pre-specify a censoring model by iterating
-between estimation of the outcome and censoring models. However, it seems that this procedure is in general not
-guaranteed to converge to the true data-generating mechanism
+pre-specify a censoring model by iterating between estimation
+of the outcome and censoring models. However, this procedure
+is in general not guaranteed to converge to the true
+data-generating mechanism
 \citep[][Appendix~A.4]{munch2024thesis}.
 
 \subsection{Outline of the paper}
@@ -224,14 +225,14 @@ Section~\ref{sec:super-learner-simple} we define the state
 learner, while Section~\ref{sec:theor-results-prop} provides
 theoretical guarantees. In Section~\ref{sec:use-cases-state}
 we demonstrate how the state learner can be used to obtain
-risk predictions and how it can be applied in the context of
-causal inference. Section~\ref{sec:numer-exper} reports the
-results of numerical experiments, and
-Section~\ref{sec:real-data-appl} illustrates the method on
-prostate cancer data. We conclude with a discussion in
-Section~\ref{sec:discussion}. Proofs are collected in
-Appendix~\ref{sec:proofs}. Code and an implementation of the
-state learner are available at
+risk predictions, and we briefly mention how it can be applied
+in the context of causal inference.
+Section~\ref{sec:numer-exper} reports the results of numerical
+experiments, and Section~\ref{sec:real-data-appl} illustrates
+the method on prostate cancer data. We conclude with a
+discussion in Section~\ref{sec:discussion}. Proofs are
+collected in Appendix~\ref{sec:proofs}. Code and an
+implementation of the state learner are available at
 \url{https://github.com/amnudn/statelearner}.
 
 
@@ -660,7 +661,9 @@ equation~(\ref{eq:F-def}). In the following we let
   \begin{equation*}
     F_P = \argmin_{F \in \mathcal{H}_{\mathcal{P}}} P{[\bar{B}_\tau(F, \blank)]},
   \end{equation*}
-  \( P \)-almost surely.
+  for all \( j \in \{-1, 0, 1, 2 \} \), almost all
+  \( t \in [0,\tau] \), and \( P \)-almost all
+  \( x \in \mathcal{X} \).
 \end{proposition}
 \begin{proof}
   See Appendix~\ref{sec:consistency-proof}.
@@ -732,13 +735,13 @@ Proposition~\ref{prop:oracle-prop} has the following asymptotic consequences.
   See Appendix~\ref{sec:oracle-inequalities}.
 \end{proof}
 
-Proposition~\ref{prop:oracle-prop} provides a precise bound on
-the average price we pay for using cross-validation to select
-a learner from a library of candidates as compared to knowing
+Proposition~\ref{prop:oracle-prop} provides a bound on the
+average price we pay for using cross-validation to select a
+learner from a library of candidates as compared to knowing
 the oracle learner in advance. Corollary~\ref{cor:asymp-cons}
-states that this price is asymptotically vanishing as long as
-the number of learners in the library grows with sample size
-at a polynomial rate.
+states that this price is asymptotically vanishing, up to
+logarithmic terms, as long as the number of learners in the
+library grows with sample size at a polynomial rate.
 
 \section{Use cases for the state learner}
 \label{sec:use-cases-state}
@@ -800,7 +803,7 @@ $(\Lambda_1, \Lambda_2)$ provided by the state learner as
 input to equations~\eqref{eq:surv-def}
 and~\eqref{eq:cs-risk-def}.
 
-\subsection{Targeted and debiased machine learning}
+\subsection{Targeted machine learning and causal inference}
 \label{sec:targeted-learning}
 
 The framework of \textit{targeted} or \textit{debiased}
@@ -814,21 +817,20 @@ interpretable target parameters \citep{van2006targeted,
   \citep[e.g.,][]{van2011targeted,kennedy2016semiparametric,rytgaard2022targeted}.}
 A targeted or debiased estimator is constructed by first
 estimation high-dimensional nuisance parameters using machine
-learning, and then employing a debiasing or targeting step by
-using tools from semi-parametric efficiency theory
+learning, and then employing a debiasing or targeting step
+that is motivated from semi-parametric efficiency theory
 \citep{pfanzagl1985contributions,bickel1993efficient,van2003unified,tsiatis2007semiparametric,kennedy2022semiparametric}.
 In the context of right-censored competing risk data, the
 high-dimensional nuisance parameters needed to be estimated
 will typically include the cause-specific cumulative hazard
 functions and the cumulative hazard function for censoring
 \citep[e.g.,][]{van2003unified,rytgaard2021estimation,rytgaard2022targeted}.
-The state learner is hence particularly well suited for
-targeted and debiased machine learning as it immediately
-provides estimates of these nuisance parameters. Though it
-served as our original motivation for developing the state
-learner, we leave the study of the state learner in the
-context of targeted and debiased machine learning for a future
-paper.
+The state learner immediately provides estimates of these
+nuisance parameters and is hence particularly well suited for
+targeted and debiased machine learning. Though it served as
+our original motivation for developing the state learner, we
+leave the study of the state learner in the context of
+targeted and debiased machine learning for a future paper.
 
 
 
